# 25.2

./: .coverage  pyproject.toml  requirements.txt
config/: settings.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
main/: models.py  paginators.py  permissions.py  serializers.py  tests.py  urls.py  validators.py  views.py
main/management/commands/: utils.py
main/migrations/: 0001_initial.py  0002_payments.py  0003_lesson_lesson_count.py  0004_remove_lesson_lesson_count.py  0005_lesson_curse.py  0006_alter_lesson_curse.py  0007_curse_owner_lesson_owner.py  0008_curse_is_public_lesson_is_public.py
users/: models.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_remove_user_username_user_avatar_user_country_and_more.py  0003_user_role.py  0004_subscription.py  0005_remove_subscription_subscripe_subscription_owner_and_more.py  0006_remove_subscription_sub_status.py  0007_delete_subscription.py
